--- a/exemples/css/search.css
+++ b/exemples/css/search.css
@@ -8,35 +8,40 @@ body{
   background-color: #2a4d69
 }
 .menu{
-  border: 1px solid blue;
-  margin: 0 10px;
+  margin: 0 5px;
+  padding: 5px;
+  border-radius: 10px;
 }
 .menu:link{
   color: black;
-  background-color: #e7eff6;
+  text-decoration: none;
   font-size: 20px;
 }
 .menu:visited{
   color: black;
-  background-color: #e7eff6;
-}
-.menu:hover{
-
-}
-.menu:active{
   
 }
+.menu:hover{
+  background-color: #e7eff6;
+}
+.menu:active{
+  color: #2a4d69;
+}
 #menu{
-  border: 1px solid red;
   padding: 10px 20px;
+  background-color: #adcbe3;
+  border: 1px solid #4b86b4;
+  border-radius: 20px;
 }
 #bd{
   background-color: white;
   height: 500px;
+  border: 5px solid #4b86b4;
+  border-radius: 20px;
 }
 #infoSearch{
   width: 500px;
-  margin: 0 auto;
+  margin: 30px auto;
 }
 #mainTitle{
   padding-left: 100px;
@@ -45,8 +50,10 @@ body{
   width: 300px;
   height: 300px;
   display: none;
-  margin: 30px 20px;
+  margin: 0 20px;
   float: left;
+  border: 5px solid #2a4d69;
+  border-radius: 10px;
 }
 #imgConf{
   width: 300px;
